--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,19 @@ plugins:
       languages:
         en: English
         fr: Français
+ - glightbox:
+   touchNavigation: true
+   loop: false
+   effect: zoom
+   slide_effect: slide
+   width: 100%
+   height: auto
+   zoomable: true
+   draggable: true
+   skip_classes:
+     - custom-skip-class-name
+   auto_caption: true
+   caption_position: bottom
 #  - encryptcontent:
 #      title_prefix: '[LOCK]'
 #      summary: 'another informational message to encrypted content'
@@ -34,8 +47,11 @@ markdown_extensions:
   - markdown.extensions.codehilite:
       guess_lang: false
   - admonition
-  - codehilite
+  - meta
   - attr_list
+  - md_in_html
+  - codehilite
+  - footnotes
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.superfences:
