--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ mkdocs-material>=7.1.11
 mkdocs-static-i18n>=0.18
 mkdocs-mermaid2-plugin>=0.5.2
 mkdocs-encryptcontent-plugin>=2.1.0
+mkdocs-glightbox
