--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-mkdocs-material-extensions>=1.0.3
-pygments>=2.10
-pymdown-extensions>=9.0
-mkdocs-material>=7.1.11
-mkdocs-static-i18n>=0.18
-mkdocs-mermaid2-plugin>=0.5.2
-mkdocs-encryptcontent-plugin>=2.1.0
+mkdocs-material-extensions
+pygments
+pymdown-extensions
+mkdocs-material
+mkdocs-static-i18n
+mkdocs-mermaid2-plugin
+mkdocs-encryptcontent-plugin
 mkdocs-glightbox
