--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+mkdocs-material==8.0.0b2
 mkdocs-material-extensions
 pygments
 pymdown-extensions
-mkdocs-material
 mkdocs-static-i18n
 mkdocs-mermaid2-plugin
 mkdocs-encryptcontent-plugin
